--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7561,6 +7561,14 @@ body {
   visibility: visible;
 }
 
+.icon {
+  fill: currentColor;
+}
+
+.icon:hover {
+  fill: #fed7d7;
+}
+
 @media (min-width: 640px){
   .sm\:appearance-none{
     -webkit-appearance: none;
