--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -1,6 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Anton);@import url(https://fonts.googleapis.com/css?family=Comfortaa);@charset "UTF-8";
-
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@import url(https://fonts.googleapis.com/css?family=Poppins);/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
    ========================================================================== */
@@ -7620,70 +7618,19 @@ video {
 }
 
 body {
-  font-family: "Comfortaa", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.heading {
-  font-family: "Anton", sans-serif;
+.profile:hover .profile-dropdown {
+  display: block;
 }
 
-.overlay {
-  visibility: hidden;
+.svg-navigation {
+  fill: #a0aec0;
 }
 
-.overlay:target {
-  visibility: visible;
-}
-
-.icon {
-  fill: currentColor;
-}
-
-.icon:hover {
-  fill: #fed7d7;
-}
-
-.notification {
-  background-color: #4299e1;
-  border-color: #90cdf4;
-}
-
-.notification .notification--svg:before {
-  display: inline-block;
-  text-align: center;
-  font-weight: 800;
-  border-width: 2px;
-  border-radius: 9999px;
-  fill: currentColor;
-  height: 2rem;
-  width: 2rem;
-  margin-right: 1.5rem;
-  margin-bottom: 0.5rem;
-  content: "!";
-  border-color: #90cdf4;
-  color: #bee3f8;
-}
-
-.notification--error {
-  background-color: #f56565;
-  border-color: #feb2b2;
-}
-
-.notification--error .notification--svg:before {
-  content: "x";
-  border-color: #feb2b2;
-  color: #fed7d7;
-}
-
-.notification--success {
-  background-color: #48bb78;
-  border-color: #9ae6b4;
-}
-
-.notification--success .notification--svg:before {
-  content: "\2714";
-  border-color: #9ae6b4;
-  color: #c6f6d5;
+.navigation li a:hover .svg-navigation {
+  fill: #edf2f7;
 }
 
 @media (min-width: 640px){
