--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14830,6 +14830,14 @@ video {
   z-index: auto;
 }
 
+.overlay {
+  visibility: hidden;
+}
+
+.overlay:target {
+  visibility: visible;
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
